fix : aggiunta coordinata in overflow per evitare scroll orizzontale e tolt il calc in header bar e inserito flex-grow 1

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 	width: 230px;
 	background-color: black;
 	padding: 20px;
-	overflow: auto;
+	overflow-y: auto;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -44,7 +44,7 @@ body {
 .main-content {
 	flex-grow: 1;
 	background-color: #1e293b;
-	overflow: auto;
+	overflow-y: auto;
 	/* scroll del contenuto centrale */
 }
 
@@ -62,7 +62,7 @@ body {
 
 /* BARRA CON PULSANTE TRATTATO COME HEADER */
 .header-bar {
-	width: calc(100vw - 230px);
+    flex-grow: 1;
 	height: 80px;
 	position: sticky;
 	top: 0;
